<resources>
    <string name="app_name">Airline App</string>
    <string name="flights">Flights</string>
    <string name="airlines">Airlines</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="new_airline">New Airline</string>
    <string name="circular_button_with_plus_sign">add new airline</string>

    <string name="read_me">\n
Addison Wurtz\n
Project 6 (Airline-Android)\n
CS510 Advanced Programming in Java\n
\n
This project is an airline application for android that performs all the same tasks as the previous
projects (adding and searching flights, viewing airlines, pretty printing, etc.) but it uses an
application/user interface instead of a command line interface, which fundamentally changes the user
experience and data input.
\n\n
From the entry point activity, the user should be able to navigate easily through the application,
adding airlines and flights to the app, searching for flights between airports, and displaying
all flights associated with a given airline. Additionally, this application is designed to store
flights persistently, even if the app is closed or loses user focus.
\n\n
NOTE: Airlines (in the AirlineActivity) are clickable and will display a pretty printed list of all
    flights associated with that airline.</string>
    <string name="add_flights">Add Flights</string>
    <string name="source_airport">Source Airport</string>
    <string name="arrive_time">Arrive Time</string>
    <string name="airline_name">Airline Name</string>
    <string name="depart_date">Depart Date</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="depart_time">Depart Time</string>
    <string name="source_airport_code">Source Airport Code</string>
    <string name="destination_airport_code">Destination Airport Code</string>
    <string name="flight_search">Flight Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_search_matches">No flights matched your search.</string>
    <string name="search_results">Search Results</string>
    <string name="arrive_date">Arrive Date</string>
    <string name="flight_number">Flight Number</string>
    <string name="am">am</string>
    <string name="pm">pm</string>


</resources>