<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/editTextAirlineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="208dp"
        android:ems="10"
        android:hint="@string/airline_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lineHeight="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/editTextSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="208dp"
        android:ems="10"
        android:hint="@string/source_airport_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lineHeight="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAirlineName"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="208dp"
        android:ems="10"
        android:hint="@string/destination_airport_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lineHeight="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSource"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="208dp"
        android:lineHeight="44dp"
        android:text="@string/flight_search"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:onClick="searchFlights"
        android:text="@string/search"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination"
        app:layout_constraintVertical_bias="0.223" />
</androidx.constraintlayout.widget.ConstraintLayout>